Time: 9 ms (44.75%) | Memory: 46.5 MB (72.72%) - LeetSync