@@ -1,15 +1,14 @@
 class Solution {
     public int[][] merge(int[][] intervals) {
         Arrays.sort(intervals, (a, b) -> Integer.compare(a[0], b[0]));
-        List<int[]> merged = new LinkedList<>();
+        List<int[]> list = new ArrayList<>();
         for (int[] interval : intervals) {
-            if (merged.isEmpty() || merged.getLast()[1] < interval[0]) {
-                merged.add(interval);
+            if (list.isEmpty() || list.get(list.size() - 1)[1] < interval[0]) {
+                list.add(interval);
             } else {
-                merged.getLast()[1] = Math.max(interval[1], merged.getLast()[1]);
+                list.get(list.size() - 1)[1] = Math.max(interval[1], list.get(list.size() - 1)[1]);
             }
         }
-
-        return merged.toArray(new int[merged.size()][]);
+        return list.toArray(new int[list.size()][]);
     }
 }
